proto_library(
    name = "pod_proto",
    srcs = ["POD.proto"],
)

load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

go_grpc_library(
    name = "pod_go_proto",
    importpath = "github.com/HyperJackets/buzz-22/proto",
    protos = [":pod_proto"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "pod_server",
    srcs = ["server/server.go"],
    deps = [":pod_go_proto"],
)
