package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

proto_library(
    name = "pod_proto",
    srcs = ["POD.proto"],
)

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

cpp_grpc_library(
    name = "pod_cc_proto",
    protos = [":pod_proto"],
)

load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

go_grpc_library(
    name = "pod_go_proto",
    importpath = "github.com/HyperJackets/buzz-22/networking/PODProto",
    protos = [":pod_proto"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "pod_server",
    srcs = ["server/server.go"],
    deps = [
        ":pod_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "pod_client",
    srcs = ["client/client.go"],
    deps = [
        ":pod_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
