package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")

proto_library(
    name = "pod_proto",
    srcs = ["POD.proto"],
)

cc_proto_library(
    name = "pod_cc_proto",
    deps = [":pod_proto"],
)

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_grpc_library(
    name = "pod_cc_grpc",
    srcs = [":pod_proto"],
    grpc_only = True,
    deps = [":pod_cc_proto"],
)

cc_binary(
    name = "pod_cc_server",
    srcs = ["server-cc/server.cpp"],
    defines = ["BAZEL_BUILD"],
    deps = [
        ":pod_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

go_grpc_library(
    name = "pod_go_proto",
    importpath = "github.com/HyperJackets/buzz-22/networking/PODProto",
    protos = [":pod_proto"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "pod_go_server",
    srcs = ["server-go/server.go"],
    deps = [
        ":pod_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "pod_client",
    srcs = ["client/client.go"],
    deps = [
        ":pod_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
